--- a/less/home-page.less
+++ b/less/home-page.less
@@ -3,6 +3,11 @@
 .home {
 
   .intro {
+    margin-top: 130px;
+
+    @media @phone {
+      margin-top: 100px;
+    }
 
     h2 {
       padding: 15px;
