--- a/less/navigation.less
+++ b/less/navigation.less
@@ -1,5 +1,13 @@
 // Navigation code here
 
+.nav-container {
+    width: 100%;
+    background: @wild-sand;
+    position: fixed;
+    opacity: 0.9;
+    top: 0px;
+}
+
 .logo {
     text-align: center;
     margin-top: 20px;
